--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Flask = "^2.0.1"
 python-dotenv = "^0.19.0"
 Flask-SQLAlchemy = "^2.5.1"
 psycopg2 = "^2.9.1"
+pytz = "^2021.3"
 
 [tool.poetry.dev-dependencies]
 
