--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python-dotenv = "^0.19.0"
 Flask-SQLAlchemy = "^2.5.1"
 psycopg2 = "^2.9.1"
 pytz = "^2021.3"
+bcrypt = "^3.2.0"
+PyJWT = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 
